.provarCaches/00D410000011HE0EAM/objects/rstkf__glcmp__c.object
<CustomObject>
    <customHelpPage>rstkf__objecthelp_glcmp</customHelpPage>
    <description>glcmp__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glcmp_cmpno__r.rstk__externalid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__glcmp_cmpno__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_accumexchgainlosssacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Prior Years’ Gain/Loss on Exchange Acct</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Financial Companies (Prior Years’ Gain/Loss on Exchange Acct)</relationshipLabel>
        <relationshipName>glcmps8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_auto12periods__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Auto Create 12 Monthly Periods</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_autopostreversals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>glcmp_autopostreversals__c</description>
        <inlineHelpText>If this is checked, automatic reversals of reversing entries will be posted in the subsequent period at the same time that the original entries post in the current period. If is not checked, the reversing entries will have to be posted manually.</inlineHelpText>
        <label>Post Reversing JEs With Original Entries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_city__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_cmpno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company</label>
        <referenceTo>rstk__sycmp__c</referenceTo>
        <relationshipLabel>Financial Companies</relationshipLabel>
        <relationshipName>glcmps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_cmpnumber__c</fullName>
        <formula>rstkf__glcmp_cmpno__r.rstk__sycmp_cmpno__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_contactemail__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_currentearningsacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Current Year’s Earnings Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Financial Companies (Current Year’s Earnings Account)</relationshipLabel>
        <relationshipName>glcmps5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_currentexchgainlosssacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Current Year’s Gain/Loss on Exchnge Acct</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Financial Companies (Current Year’s Gain/Loss on Exchnge Acct)</relationshipLabel>
        <relationshipName>glcmps7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_curyear__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Current Fiscal Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>Financial Companies (Current Fiscal Year)</relationshipLabel>
        <relationshipName>glcmps1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_dfltbankacctcash__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Default Bank Account for Cash</label>
        <referenceTo>rstkf__glbankacct__c</referenceTo>
        <relationshipLabel>Financial Companies (Default Bank Account for Cash)</relationshipLabel>
        <relationshipName>glcmps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_dfltbankacctcheck__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Default Bank Account for Checks</label>
        <referenceTo>rstkf__glbankacct__c</referenceTo>
        <relationshipLabel>Financial Companies (Default Bank Account for Checks)</relationshipLabel>
        <relationshipName>glcmps1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_dfltbankacctcreditcard__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Default Bank Account for Credit Card</label>
        <referenceTo>rstkf__glbankacct__c</referenceTo>
        <relationshipLabel>Financial Companies (Default Bank Account for Credit Card)</relationshipLabel>
        <relationshipName>glcmps2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_dfltbankaccteft__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Default Bank Account for EFT</label>
        <referenceTo>rstkf__glbankacct__c</referenceTo>
        <relationshipLabel>Financial Companies (Default Bank Account for EFT)</relationshipLabel>
        <relationshipName>glcmps3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_dfltcashacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Default Cash Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipName>glcmps14</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_dfltunbilledccacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Default Unbilled Credit Card Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipName>glcmps15</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_exchratemstrind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Z_OBSOLETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_fax__c</fullName>
        <label>Fax</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_gparentcurr__c</fullName>
        <formula>TEXT(rstkf__glcmp_parentcmpno__r.rstkf__glcmp_parentcmpno__r.rstkf__glcmp_cmpno__r.rstk__sycmp_homecurr__r.rstk__sycurr_currency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grand Parent Company Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_homecurr__c</fullName>
        <formula>rstkf__glcmp_cmpno__r.rstk__sycmp_homecurr__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_isocountry__c</fullName>
        <description>glcmp_isocountry__c</description>
        <inlineHelpText>This fields carries the ISO Country Code (official abbreviated value)</inlineHelpText>
        <label>ISO Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>rstk__ISO_Country_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_je_email_template__c</fullName>
        <label>JE Email Template</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_manfxoverok__c</fullName>
        <defaultValue>false</defaultValue>
        <description>glcmp_manfxoverok__c</description>
        <inlineHelpText>This field opens a feature that allows for the Override of Currency Exchange Rates in ERP and Finance transactions.</inlineHelpText>
        <label>Allow Override of Exchange Rates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_multicurrency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multi Currency Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_nosumproj__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When selected, the Project value is not considered when summarizing GL Transactions for consumption by RFA.</inlineHelpText>
        <label>Exclude Project from GLTXN Summarization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_numbremits_perstub__c</fullName>
        <label>Remittance Details per AP Check</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_offsystemparent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consolidated In Parent Company(off RSTK)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_offsystemparentcurr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Home Currency of ‘Off System Parent’</label>
        <referenceTo>rstk__sycurr__c</referenceTo>
        <relationshipLabel>Financial Companies</relationshipLabel>
        <relationshipName>glcmps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_parentcmpno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Financial Companies</relationshipLabel>
        <relationshipName>glcmps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_perincloseproc__c</fullName>
        <label>Period in the Close Process</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_phone__c</fullName>
        <label>Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_plratemethod__c</fullName>
        <defaultValue>&quot;Year to Date Average&quot;</defaultValue>
        <inlineHelpText>This field indicates the method to be used when calculating the exchange rate to be used when rolling subsidiary company data up to the parent company (Monthly Average or Year to Date Average).  The value is to be set on the Parent Company.</inlineHelpText>
        <label>P&amp;L Account Rollup Exchange Rate Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Year to Date Average</fullName>
                    <default>true</default>
                    <label>Year to Date Average</label>
                </value>
                <value>
                    <fullName>Monthly Average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_postclearing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Posting Clearing Account</description>
        <inlineHelpText>Large Journal Batches (those exceeding 200 entries) require posting in groups. This account is used on transactions added to balance each group during the posting process. This account should always carry a zero balance except during the posting process.</inlineHelpText>
        <label>Posting Clearing Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Financial Companies (Posting Clearing Account)</relationshipLabel>
        <relationshipName>Financial_Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_regnumber__c</fullName>
        <inlineHelpText>This field holds a Registration Number that applies to this financial company.</inlineHelpText>
        <label>Company Registration Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_retainedearningsacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Prior Years’ Retained Earnings</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Financial Companies (Prior Years’ Retained Earnings)</relationshipLabel>
        <relationshipName>glcmps6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_rollbeforecloseok__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, allow trial data rollup to parent company prior to official initialization of the month-end close. Cannot be checked if parent company is not defined.</inlineHelpText>
        <label>Allow trial consolidation before closing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_stateprov__c</fullName>
        <label>State / Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_taxid__c</fullName>
        <label>Tax Identification Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_undoperzero__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When a fiscal year is closed, year end balances for that year are written to Period Zero of the subsequent year. Enabling this field causes the period zero entries to be reversed when a year is reopened vs. being adjusted when the year is re-closed</inlineHelpText>
        <label>Reverse Period Zero when Reopening Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_uselastexpcurr__c</fullName>
        <defaultValue>false</defaultValue>
        <description>glcmp_uselastexpcurr__c</description>
        <label>Use Expired Exchange Rates If Necessary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_whtid__c</fullName>
        <label>WHT Identification Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_yearincloseproc__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Year of Period in the Close Process</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>Financial Companies (Year of Period in the Close Process)</relationshipLabel>
        <relationshipName>glcmps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp_zippostal__c</fullName>
        <label>Zip / Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__searchindex__c</fullName>
        <label>Search Index</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Financial Company</label>
    <listViews>
        <fullName>DT</fullName>
        <columns>NAME</columns>
        <columns>rstkf__externalid__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Mine</filterScope>
        <label>DT</label>
    </listViews>
    <listViews>
        <fullName>rstkf__All</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glcmp_parentcmpno__c</columns>
        <columns>rstkf__glcmp_homecurr__c</columns>
        <columns>rstkf__glcmp_offsystemparentcurr__c</columns>
        <columns>rstkf__glcmp_multicurrency__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstkf__All1</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glcmp_cmpnumber__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstkf__Firoz_view</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>rstkf__externalid__c</columns>
        <columns>rstkf__glcmp_exchratemstrind__c</columns>
        <columns>rstkf__glcmp_homecurr__c</columns>
        <columns>rstkf__glcmp_multicurrency__c</columns>
        <columns>rstkf__glcmp_parentcmpno__c</columns>
        <columns>rstkf__glcmp_curyear__c</columns>
        <columns>rstkf__glcmp_yearincloseproc__c</columns>
        <columns>rstkf__glcmp_perincloseproc__c</columns>
        <columns>rstkf__glcmp_currentearningsacct__c</columns>
        <columns>rstkf__glcmp_currentexchgainlosssacct__c</columns>
        <columns>rstkf__glcmp_dfltbankacctcash__c</columns>
        <columns>rstkf__glcmp_dfltbankacctcheck__c</columns>
        <columns>rstkf__glcmp_dfltbankacctcreditcard__c</columns>
        <filterScope>Everything</filterScope>
        <label>Firoz view</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Financial_Company_Master</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>rstkf__externalid__c</columns>
        <columns>rstkf__formula_extid__c</columns>
        <columns>rstkf__glcmp_cmpno__c</columns>
        <columns>rstkf__glcmp_parentcmpno__c</columns>
        <columns>rstkf__glcmp_homecurr__c</columns>
        <columns>rstkf__glcmp_perincloseproc__c</columns>
        <columns>rstkf__glcmp_curyear__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstkf__glcmp_retainedearningsacct__c</columns>
        <columns>rstkf__glcmp_currentexchgainlosssacct__c</columns>
        <columns>rstkf__glcmp_accumexchgainlosssacct__c</columns>
        <columns>rstkf__glcmp_postclearing__c</columns>
        <columns>rstkf__glcmp_currentearningsacct__c</columns>
        <filterScope>Everything</filterScope>
        <label>Financial Company Master</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Financial_Company_Master_Filtered</fullName>
        <columns>rstkf__glcmp_homecurr__c</columns>
        <columns>NAME</columns>
        <columns>rstkf__glcmp_cmpno__c</columns>
        <columns>rstkf__glcmp_multicurrency__c</columns>
        <columns>rstkf__glcmp_parentcmpno__c</columns>
        <columns>rstkf__glcmp_curyear__c</columns>
        <columns>rstkf__glcmp_yearincloseproc__c</columns>
        <columns>rstkf__glcmp_perincloseproc__c</columns>
        <columns>rstkf__glcmp_currentearningsacct__c</columns>
        <columns>rstkf__glcmp_currentexchgainlosssacct__c</columns>
        <columns>rstkf__glcmp_dfltbankacctcash__c</columns>
        <columns>rstkf__glcmp_dfltbankacctcheck__c</columns>
        <columns>rstkf__glcmp_dfltbankacctcreditcard__c</columns>
        <columns>rstkf__glcmp_dfltbankaccteft__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glcmp_homecurr__c</field>
            <operation>contains</operation>
            <value>CAD</value>
        </filters>
        <label>Financial Company Master - Filtered</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstkf__companyisrequired</fullName>
        <active>true</active>
        <description>Company is required</description>
        <errorConditionFormula>ISBLANK( rstkf__glcmp_cmpno__c )</errorConditionFormula>
        <errorDisplayField>rstkf__glcmp_cmpno__c</errorDisplayField>
        <errorMessage>Company is required</errorMessage>
    </validationRules>
</CustomObject>